# cgal-python-bindings

./: .gitignore  CMakeLists.txt  README.md
src/: cgal_kernel.cpp
tests/: test_kernel.py
